--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <!-- 検索中表示 -->
-        <div id="currentSearch" style="display:none; margin: 20px 0; padding: 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 12px; color: white; text-align: center; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);">
+        <div id="currentSearch" style="display:none; margin: 20px 0; padding: 20px; background: linear-gradient(135deg, rgba(0, 255, 163, 0.2) 0%, rgba(0, 184, 217, 0.2) 100%); border-radius: 12px; border: 1px solid rgba(0, 255, 163, 0.4); color: white; text-align: center; box-shadow: 0 0 30px rgba(0, 255, 163, 0.3), inset 0 0 20px rgba(0, 255, 163, 0.1);">
             <div style="font-size: 14px; opacity: 0.9; margin-bottom: 8px;">🔍 SEARCHING NOW</div>
             <div id="currentSearchText" style="font-size: 18px; font-weight: bold; letter-spacing: 0.5px;"></div>
         </div>
