Change: Avg Margin → Total Profit

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
             <div class="stat-card">
                 <div class="stat-icon">📈</div>
-                <div class="stat-value" id="avgProfitRate">0%</div>
-                <div class="stat-label">Avg Margin</div>
+                <div class="stat-value" id="totalProfit">¥0</div>
+                <div class="stat-label">Total Profit</div>
             </div>
         </div>
 
