Change: 在庫フィルターデフォルトON

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div style="display: flex; align-items: center; justify-content: center; gap: 15px; margin: 20px 0; padding: 15px; background: rgba(0, 255, 163, 0.05); border-radius: 10px; border: 1px solid rgba(0, 255, 163, 0.2);">
                 <span style="color: rgba(148, 163, 184, 0.9); font-size: 14px; font-weight: 500;">📦 在庫状況不明も含める</span>
                 <label class="toggle-switch">
-                    <input type="checkbox" id="includeUnknownStock">
+                    <input type="checkbox" id="includeUnknownStock" checked>
                     <span class="toggle-slider"></span>
                 </label>
             </div>
