--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <div style="display: flex; align-items: center; gap: 15px;">
                     <label style="color: rgba(148, 163, 184, 0.9); font-size: 14px; font-weight: 500;">並び替え:</label>
                     <select id="sortSelect" onchange="sortResults()" style="padding: 10px 20px; background: rgba(0, 255, 163, 0.1); border: 1px solid rgba(0, 255, 163, 0.3); border-radius: 8px; color: white; font-weight: 600; cursor: pointer; outline: none;">
+                        <option value="default">標準（出現順）</option>
                         <option value="profit-desc">利益額 (高い順)</option>
                         <option value="profit-asc">利益額 (安い順)</option>
                         <option value="margin-desc">利益率 (高い順)</option>
