--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <div style="margin-bottom: 20px;">
                     <label style="color: rgba(148, 163, 184, 0.9); display: block; margin-bottom: 10px; font-weight: 600;">送信方法</label>
                     <div style="display: flex; gap: 15px;">
-                        <label style="display: flex; align-items: center; gap: 8px; cursor: pointer; padding: 10px 20px; background: rgba(0, 255, 163, 0.1); border: 2px solid rgba(0, 255, 163, 0.3); border-radius: 8px; transition: all 0.3s;">
-                            <input type="radio" name="sendMethod" value="email" id="methodEmail" checked onchange="toggleSendMethodFields()" style="cursor: pointer;">
-                            <span style="color: white; font-weight: 600;">📧 メール</span>
+                        <label class="method-radio" for="methodEmail" style="flex: 1; display: flex; align-items: center; justify-content: center; gap: 10px; cursor: pointer; padding: 15px 20px; background: rgba(0, 255, 163, 0.1); border: 2px solid rgba(0, 255, 163, 0.3); border-radius: 10px; transition: all 0.3s;">
+                            <input type="radio" name="sendMethod" value="email" id="methodEmail" checked onchange="toggleSendMethodFields()" style="width: 20px; height: 20px; cursor: pointer; accent-color: #00FFA3;">
+                            <span style="color: white; font-weight: 700; font-size: 16px;">📧 メール</span>
                         </label>
-                        <label style="display: flex; align-items: center; gap: 8px; cursor: pointer; padding: 10px 20px; background: rgba(0, 255, 163, 0.1); border: 2px solid rgba(0, 255, 163, 0.3); border-radius: 8px; transition: all 0.3s;">
-                            <input type="radio" name="sendMethod" value="line" id="methodLine" onchange="toggleSendMethodFields()" style="cursor: pointer;">
-                            <span style="color: white; font-weight: 600;">💬 LINE</span>
+                        <label class="method-radio" for="methodLine" style="flex: 1; display: flex; align-items: center; justify-content: center; gap: 10px; cursor: pointer; padding: 15px 20px; background: rgba(0, 255, 163, 0.1); border: 2px solid rgba(0, 255, 163, 0.3); border-radius: 10px; transition: all 0.3s;">
+                            <input type="radio" name="sendMethod" value="line" id="methodLine" onchange="toggleSendMethodFields()" style="width: 20px; height: 20px; cursor: pointer; accent-color: #00FFA3;">
+                            <span style="color: white; font-weight: 700; font-size: 16px;">💬 LINE</span>
                         </label>
                     </div>
                 </div>
