Fix: LINE User IDを任意項目に変更
- LINE送信時、User IDなしで保存可能に
- 招待リンク経由の自動登録に対応
- わかりやすい説明文を追加

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                     <input type="email" id="partnerEmail" placeholder="yamada@example.com" style="width: 100%; padding: 10px; background: rgba(17, 24, 39, 0.8); border: 1px solid rgba(0, 255, 163, 0.3); border-radius: 5px; color: white;">
                 </div>
 
-                <!-- LINE User ID（LINE送信時のみ必須） -->
+                <!-- LINE User ID（任意 - 友だち追加で自動取得） -->
                 <div id="lineField" style="margin-bottom: 15px; display: none;">
-                    <label style="color: rgba(148, 163, 184, 0.9); display: block; margin-bottom: 5px;">LINE User ID <span style="color: #FF6B9D;">*</span></label>
-                    <input type="text" id="partnerLineId" placeholder="Uxxxxxxxxxxxxx" style="width: 100%; padding: 10px; background: rgba(17, 24, 39, 0.8); border: 1px solid rgba(0, 255, 163, 0.3); border-radius: 5px; color: white;">
-                    <small style="color: rgba(148, 163, 184, 0.7); display: block; margin-top: 5px;">※友だち追加で自動取得も可能</small>
+                    <label style="color: rgba(148, 163, 184, 0.9); display: block; margin-bottom: 5px;">LINE User ID（任意）</label>
+                    <input type="text" id="partnerLineId" placeholder="空欄で保存すると招待リンクが表示されます" style="width: 100%; padding: 10px; background: rgba(17, 24, 39, 0.8); border: 1px solid rgba(0, 255, 163, 0.3); border-radius: 5px; color: white;">
+                    <small style="color: rgba(148, 163, 184, 0.7); display: block; margin-top: 5px;">💡 空欄で保存→招待リンクが表示→外注先が友だち追加→自動で登録されます</small>
                 </div>
 
                 <!-- アフィリエイトID（任意） -->
