Add legal pages (Terms, Privacy, Commerce) and footer links
- Create terms.html with full terms of service
- Create privacy.html with privacy policy
- Create commerce.html with commercial transaction act notice
- Add footer links in auth modal (利用規約/プライバシーポリシー/特定商取引法)
- Cyberpunk design matching PROFIT MATRIX theme

--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
                     ← ログインに戻る
                 </a>
             </div>
+
+            <!-- フッターリンク -->
+            <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
+                <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+                    <a href="/terms.html" target="_blank" style="color: rgba(148, 163, 184, 0.9); text-decoration: none; font-size: 12px; transition: color 0.3s;">
+                        利用規約
+                    </a>
+                    <a href="/privacy.html" target="_blank" style="color: rgba(148, 163, 184, 0.9); text-decoration: none; font-size: 12px; transition: color 0.3s;">
+                        プライバシーポリシー
+                    </a>
+                    <a href="/commerce.html" target="_blank" style="color: rgba(148, 163, 184, 0.9); text-decoration: none; font-size: 12px; transition: color 0.3s;">
+                        特定商取引法
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
