Update commerce.html with actual business information
- 販売事業者: 北又　淳
- 所在地: 大阪府泉佐野市
- 電話番号/メールアドレス追加
- 特定商取引法の法的要件を満たす

--- a/commerce.html
+++ b/commerce.html
@@ -116,25 +116,24 @@
             <table class="info-table">
                 <tr>
                     <th>販売事業者</th>
-                    <td>【事業者名を記載】</td>
+                    <td>北又　淳</td>
                 </tr>
                 <tr>
                     <th>運営統括責任者</th>
-                    <td>【責任者名を記載】</td>
+                    <td>北又　淳</td>
                 </tr>
                 <tr>
                     <th>所在地</th>
-                    <td>【住所を記載】<br>
-                    <small style="color: rgba(148, 163, 184, 0.7);">※住所の開示請求があった場合には遅滞なく開示いたします。</small></td>
+                    <td>〒598-0021　大阪府泉佐野市日根野１１６９番地６号</td>
                 </tr>
                 <tr>
                     <th>電話番号</th>
-                    <td>【電話番号を記載】<br>
+                    <td>080-5369-5954<br>
                     <small style="color: rgba(148, 163, 184, 0.7);">※お問い合わせは原則メールにてお願いいたします。</small></td>
                 </tr>
                 <tr>
                     <th>メールアドレス</th>
-                    <td>【メールアドレスを記載】</td>
+                    <td>komedorobouinuzini@gmail.com</td>
                 </tr>
                 <tr>
                     <th>ホームページURL</th>
