--- a/commerce.html
+++ b/commerce.html
@@ -77,6 +77,12 @@
             margin-bottom: 10px;
             color: rgba(255, 255, 255, 0.85);
         }
+        .legal-content h3 {
+            color: #00B8D9;
+            font-size: 1.3em;
+            margin-top: 30px;
+            margin-bottom: 15px;
+        }
         .back-link {
             text-align: center;
             margin-top: 50px;
