Remove late payment penalty clause from terms
- 延滞損害金の条項を削除（サブスクサービスには不適切）
- 第5条をシンプルに「利用料金を支払うものとします」のみに変更

--- a/terms.html
+++ b/terms.html
@@ -129,10 +129,7 @@
             </ol>
 
             <h2>第5条（利用料金及び支払方法）</h2>
-            <ol>
-                <li>本サービスには無料プラン及び有料プランがあり、有料プランのユーザーは、当社が別途定める利用料金を、当社が指定する支払方法により支払うものとします。</li>
-                <li>ユーザーが利用料金の支払を遅滞した場合、ユーザーは年14.6％の割合による遅延損害金を支払うものとします。</li>
-            </ol>
+            <p>本サービスには無料プラン及び有料プランがあり、有料プランのユーザーは、当社が別途定める利用料金を、当社が指定する支払方法により支払うものとします。</p>
 
             <h2>第6条（禁止事項）</h2>
             <p>ユーザーは、本サービスの利用にあたり、以下の各号のいずれかに該当する行為をしてはなりません。</p>
