--- a/privacy.html
+++ b/privacy.html
@@ -170,7 +170,7 @@
             </ol>
 
             <h2>第11条（お問い合わせ窓口）</h2>
-            <p>本ポリシーに関するお問い合わせは、本サービス内のお問い合わせフォームよりお願いいたします。</p>
+            <p>本ポリシーに関するお問い合わせは、<a href="/commerce.html" target="_blank" style="color: #00FFA3; text-decoration: underline;">特定商取引法に基づく表記</a>に記載のメールアドレスまでご連絡ください。</p>
 
             <div class="effective-date">
                 制定日：2025年10月28日<br>
