--- a/terms.html
+++ b/terms.html
@@ -191,7 +191,10 @@
             <h2>第13条（通知または連絡）</h2>
             <p>ユーザーと当社との間の通知または連絡は、当社の定める方法によって行うものとします。当社は、ユーザーから、当社が別途定める方式に従った変更届け出がない限り、現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い、これらは、発信時にユーザーへ到達したものとみなします。</p>
 
-            <h2>第14条（準拠法・裁判管轄）</h2>
+            <h2>第14条（お問い合わせ窓口）</h2>
+            <p>本規約に関するお問い合わせは、<a href="/commerce.html" target="_blank" style="color: #00FFA3; text-decoration: underline;">特定商取引法に基づく表記</a>に記載のメールアドレスまでご連絡ください。</p>
+
+            <h2>第15条（準拠法・裁判管轄）</h2>
             <ol>
                 <li>本規約の解釈にあたっては、日本法を準拠法とします。</li>
                 <li>本サービスに関して紛争が生じた場合には、当社の本店所在地を管轄する裁判所を専属的合意管轄とします。</li>
